update to match project description (resolve font, spacing, and flexbox issues)

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,39 @@ html, body {
     margin: 0;
    }
 
+   .header {
+        width: 100%;
+        height: 250px;
+        margin: 0px;
+        background-size: 100%;
+        background-repeat: no-repeat;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: #1F2937;
+        color: #F9FAF8;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+        
+   }
+
+   .header-text {
+    display: flex;
+    font-size:160%;
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+    padding: 0px;
+    margin: 0px;
+
+   
+p{
+    width: 600px;
+
+}
+
+
+  
+   }
 .header-links{
     display: flex;
     justify-content: flex-end;
@@ -22,19 +55,11 @@ html, body {
 .block-images {
     display: flex;
     height:300px;
-    width:1560px;
-    justify-content: flex-start;
+    width:100%;
+    justify-content: center ;
     border: #4d565b;
 }
 
-
-.colorblock {
-    background-color: #1F2937;
-    color: #F9FAF8;
-    width:1561px;
-    height: 150px;
-    margin: 0;
-}
 
 .block-images .bike {
    border:#4d565b;
@@ -76,4 +101,23 @@ html, body {
     width: 1300px;
     justify-content: center;
     margin: 45px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 15px;
+}
+
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 115px;
+    margin: 0px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
